<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_factura"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rdb.jdb.nextu.FacturaActivity">


    <TableLayout
        android:id="@+id/tabla1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TableRow
            android:background="#727272">
            <TextView
                android:text="@string/producto"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/white"/>
            <TextView
                android:text="@string/cantidad"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/white"/>
            <TextView
                android:text="@string/unidad"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="center"
                android:layout_weight="1"
                android:textColor="@android:color/white"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/auriculares"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"/>
            <TextView
                android:text="2"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
            <TextView
                android:text="$1500"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/celular"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"/>
            <TextView
                android:text="1"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
            <TextView
                android:text="$4000"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/cargador"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"/>
            <TextView
                android:text="1"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
            <TextView
                android:text="$1000"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/protector"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"/>
            <TextView
                android:text="3"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
            <TextView
                android:text="$2000"
                android:textAppearance="?android:textAppearanceLarge"
                android:gravity="right"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tabla1"
        android:layout_margin="16dp">

        <TableRow>
            <TextView
                android:text="@string/subtotal"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="2"
                android:gravity="right"/>
            <TextView
                android:text="$14000"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"
                android:gravity="right"/>
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/impuestos"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="2"
                android:gravity="right"/>
            <TextView
                android:text="$1400"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"
                android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/descuentos"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="2"
                android:gravity="right"/>
            <TextView
                android:text="$700"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"
                android:gravity="right"/>
        </TableRow>

        <TableRow>
            <TextView
                android:text="@string/total"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="2"
                android:gravity="right"/>
            <TextView
                android:text="$14700"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_weight="1"
                android:gravity="right"/>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp"
        android:gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagar"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelar"/>
    </LinearLayout>

</RelativeLayout>
