<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_coffee"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary2"
    tools:context="com.rdb.jdb.nextu.CoffeeActivity">

    <ImageView
        android:id="@+id/cafe"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/cafe3"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorcafe"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@id/cafe"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/sesion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion1"
        android:layout_below="@id/cafe"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:paddingLeft="16dp"
        android:paddingBottom="16dp"/>
    <TextView
        android:id="@+id/sesion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion2"
        android:layout_below="@id/sesion1"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>
    <TextView
        android:id="@+id/sesion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sesion3"
        android:layout_below="@id/sesion2"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/hora1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora1"
        android:layout_below="@id/cafe"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:paddingTop="30dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:id="@+id/hora2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora2"
        android:layout_below="@id/hora1"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tvSesion3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hora3"
        android:layout_below="@id/hora2"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="16dp"/>

    <TextView
        android:id="@+id/tvEntrada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="vsdvdsvsdvdsv"
        android:textColor="@android:color/holo_blue_light"
        android:textStyle="bold"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/tvTitulo"
        android:layout_marginTop="41dp" />

</RelativeLayout>
