<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_contacto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#181818"
    android:padding="16dp"
    android:gravity="center_horizontal"
    tools:context="com.rdb.jdb.nextu.ContactoActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/txtNombre"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/numero"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/txtNumero"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:hint="@string/descripcion"
        android:layout_weight="1"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:id="@+id/txtDescripcion"
        />

    <Button
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:id="@+id/btnAdd" />

</LinearLayout>
