<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_animales"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.rdb.jdb.nextu.AnimalesActivity">

    <TableRow android:layout_weight="1">
        <ImageView  android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:src="@drawable/leon"
                    android:scaleType="centerCrop"
                    android:layout_weight="1" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/nLeon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/eLeon" />

        </LinearLayout>
    </TableRow>

    <TableRow android:layout_weight="1">
        <ImageView  android:layout_height="match_parent"
            android:layout_width="0dp"
            android:src="@drawable/pato"
            android:scaleType="centerCrop"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/nPato" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/ePato" />

        </LinearLayout>
    </TableRow>

    <TableRow android:layout_weight="1">
        <ImageView  android:layout_height="match_parent"
            android:layout_width="0dp"
            android:src="@drawable/pez"
            android:scaleType="centerCrop"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/nPez" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/ePez" />

        </LinearLayout>
    </TableRow>
</TableLayout>
