<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_galllery_grid"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    android:columnCount="3"
    tools:context="com.rdb.jdb.nextu.GallleryGridActivity">


    <ImageView
        android:src="@drawable/baloncesto"
        android:layout_width="@dimen/imagen_width"
        android:layout_height="@dimen/imagen_height3"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:src="@drawable/voleibol"
        android:layout_width="@dimen/imagen_width"
        android:layout_height="@dimen/imagen_height3"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:src="@drawable/tenis"
        android:layout_width="@dimen/imagen_width2"
        android:layout_height="@dimen/imagen_height2"
        android:scaleType="centerCrop"
        android:layout_rowSpan="3"
        />

    <TextView
        android:text="@string/baloncesto"
        android:layout_gravity="center"  />

    <TextView
        android:text="@string/voleibol"
        android:layout_gravity="center"  />


    <ImageView
        android:src="@drawable/futbol"
        android:layout_width="@dimen/imagen_width2"
        android:layout_height="@dimen/imagen_height3"
        android:scaleType="centerCrop"
        android:layout_columnSpan="2"
        />

    <TextView
        android:text="@string/futbol"
        android:layout_columnSpan="2"
        android:layout_gravity="center|top"  />

    <TextView
        android:text="@string/tenis"
        android:layout_gravity="center|top"  />

</GridLayout>
