<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_horizontal_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.rdb.jdb.nextu.HorizontalLinearActivity">

    <TextView
        android:text="@string/android3"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center"
        android:background="#512da8"
        android:textColor="@android:color/white"
        android:layout_weight="1"
        android:id="@+id/textView1" />

    <TextView
        android:text="@string/android4"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center"
        android:layout_weight="2"
        android:background="#673ab7"
        android:textColor="@android:color/white"
        android:id="@+id/textView2" />

    <TextView
        android:text="@string/android5"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:textAppearance="?android:textAppearanceLarge"
        android:gravity="center"
        android:background="#9575cd"
        android:textColor="@android:color/white"
        android:layout_weight="1"
        android:id="@+id/textView3" />

</LinearLayout>
